<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="us.echols.chorechamp.activities.ChoreDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout_chore_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_chore_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/chore_name"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView_due_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:text="@string/chore_due_placeholder"
            app:layout_constraintBaseline_toBaselineOf="@+id/switch_frequency"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/switch_frequency"/>

        <Switch
            android:id="@+id/switch_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/switch_margin"
            android:layout_marginTop="@dimen/switch_margin"
            android:checked="false"
            android:switchPadding="@dimen/switch_padding"
            android:text="@string/chore_freq_once"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_chore_name"/>

        <Button
            android:id="@+id/button_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/chore_select_time"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_due_date"/>

        <Button
            android:id="@+id/button_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/button_margin"
            android:text="@string/chore_select_date"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_time"
            app:layout_constraintRight_toLeftOf="@+id/button_time"/>

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_marginTop="8dp"
            android:text="@string/button_save"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_time"/>

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/button_margin"
            android:text="@android:string/cancel"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_save"
            app:layout_constraintRight_toLeftOf="@+id/button_save"/>

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>


