<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="us.echols.chorechamp.activities.SetPasswordActivity">

    <!--<android.support.constraint.ConstraintLayout-->
        <!--android:id="@+id/password_frame"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent">-->

        <TextView
            android:id="@+id/title_set_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginTop="32dp"
            android:text="@string/title_set_password"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_set_password"/>

        <EditText
            android:id="@+id/editText_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:hint="@string/prompt_confirm_password"
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="@+id/editText_password"
            app:layout_constraintRight_toRightOf="@+id/editText_password"
            app:layout_constraintTop_toBottomOf="@+id/editText_password"/>

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_marginTop="@dimen/button_margin"
            android:text="@android:string/ok"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_confirm"/>

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/button_margin"
            android:text="@android:string/cancel"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_save"
            app:layout_constraintRight_toLeftOf="@+id/button_save"/>
    <!--</android.support.constraint.ConstraintLayout>-->

</android.support.constraint.ConstraintLayout>
